# Arakoo

./: AI_USAGE.md  Dockerfile  README.md  pyproject.toml  run_eval.py
mobile_ui_env/: __init__.py  actions.py  dataset.py  env.py  rubric.py  state.py
tests/: test_actions.py  test_env.py  test_rewards.py
